# scheduling

./: .gitignore  .justfile  .trufflehog3.yaml  Dockerfile  LICENSE.md  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: review.yaml
src/: manage.py
src/procedures/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
src/procedures/migrations/: 0001_initial.py
src/scheduling/: asgi.py  urls.py  wsgi.py
src/scheduling/settings/: base.py  local.py  prod.py  static.py  test.py
src/services/payloads/: patients.py  procedures.py
tests/: test_procedure_payloads.py  test_procedure_views.py
